refactor(exposition)!: rename `identity.federation` configuration keys

--- a/extensions/exposition/components/context.toa.yaml
+++ b/extensions/exposition/components/context.toa.yaml
@@ -13,8 +13,8 @@ configuration:
 
   identity.federation:
     trust:
-      - issuer: https://localhost
-        audience:
+      - iss: https://localhost
+        aud:
           - one
           - two
 
