--- a/extensions/exposition/components/identity.federation/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.federation/manifest.toa.yaml
@@ -5,11 +5,14 @@ entity:
   schema:
     type: object
     properties:
+      authority:
+        description: The authority token is valid for
+        type: string
       iss:
         description: The issuer, or signer, of the token, URI like `https://accounts.google.com`
         type: string
       sub:
-        description: the ID that represents the principal making the request
+        description: The ID that represents the principal making the request
         type: string
     required:
       - iss
@@ -20,20 +23,21 @@ entity:
 operations:
   transit:
     concurrency: retry
-  incept:
-    forward: transit
-    query: false
     input:
+      authority*: string
       iss*: string
       sub*: string
-  create:
+  incept:
     input:
+      authority*: string
       id*: string
       credentials*: string
     output:
       id: string
   authenticate:
-    input: string
+    input:
+      authority*: string
+      credentials*: string
     output:
       identity:
         id: string
@@ -49,11 +53,11 @@ configuration:
           type: object
           additionalProperties: false
           properties:
-            issuer:
+            iss:
               description: Allowed origins for a token `iss` field
               type: string
               format: uri
-            audience:
+            aud:
               description: Acceptable `aud` value(s)
               type: array
               items:
@@ -73,7 +77,7 @@ configuration:
               additionalProperties: false
               minProperties: 1
           required:
-            - issuer
+            - iss
       explicit_identity_creation:
         description: Force identities to be explicitly created or incept before being used in authentication
         type: boolean
