--- a/extensions/exposition/components/identity.tokens/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.tokens/manifest.toa.yaml
@@ -49,4 +49,6 @@ exposition:
       auth:scheme: token
       auth:delegate: identity
       io:output: true # string
+      vary:embed:
+        authority: authority
       endpoint: encrypt
