--- a/runtime/cli/package.json
+++ b/runtime/cli/package.json
@@ -30,6 +30,7 @@
     "@toa.io/yaml": "1.0.0-alpha.22",
     "dotenv": "16.1.1",
     "find-up": "5.0.0",
+    "jsonpath": "1.1.1",
     "paseto": "3.1.4",
     "yargs": "17.6.2"
   },
