--- a/operations/src/deployment/chart/values.yaml
+++ b/operations/src/deployment/chart/values.yaml
@@ -41,6 +41,11 @@ services:
         secret:
           name: secret-name
           key: secret-key
+    probe:
+      port: 8000
+      path: /.ready
+      delay: 1
+
 proxies:
   - name: storage-proxy
     target: host.docker.internal
