--- a/extensions/exposition/features/steps/components/pots/manifest.toa.yaml
+++ b/extensions/exposition/features/steps/components/pots/manifest.toa.yaml
@@ -15,6 +15,8 @@ operations:
       title*: .
       volume*: .
       temperature: .
+    output:
+      id: .
   transit:
     concurrency: retry
     input:
