--- a/extensions/origins/package.json
+++ b/extensions/origins/package.json
@@ -17,6 +17,7 @@
   "main": "transpiled/index.js",
   "types": "transpiled/index.d.ts",
   "dependencies": {
+    "@google-cloud/pubsub": "4.3.3",
     "@toa.io/core": "1.0.0-alpha.28",
     "@toa.io/generic": "1.0.0-alpha.28",
     "@toa.io/pointer": "1.0.0-alpha.28",
