--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@commitlint/cli": "14.1.0",
     "@commitlint/config-conventional": "14.1.0",
     "@cucumber/cucumber": "10.0.1",
+    "@google-cloud/pubsub": "4.3.3",
     "@types/jest": "29.5.3",
     "@types/node": "20.8.10",
     "@types/randomstring": "1.1.8",
@@ -66,7 +67,8 @@
     "test:integration": "jest --roots integration --runInBand --testTimeout 180000",
     "features": "cucumber-js -t 'not @skip' && npm run features --workspaces --if-present",
     "test:all": "npm run test && npm run test:integration && npm run test:stage && npm run features",
-    "lint": "eslint $(git diff --name-only --diff-filter=d HEAD | grep -E '\\.ts$' | xargs)",
+    "lint": "eslint .",
+    "lint:diff": "eslint $(git diff --name-only --diff-filter=d HEAD | grep -E '\\.ts$' | xargs)",
     "npm:login:local": "npm adduser --registry http://localhost:4873 --auth-type=legacy",
     "version:local": "lerna version --conventional-prerelease --preid local --no-commit-hooks --no-changelog --yes --no-git-tag-version && git commit -am 'chore: local bump' --no-verify",
     "publish:canary": "lerna publish --canary --preid local --registry http://localhost:4873",
