test(exposition): add errors introspection

--- a/extensions/exposition/features/steps/components/pots/manifest.toa.yaml
+++ b/extensions/exposition/features/steps/components/pots/manifest.toa.yaml
@@ -17,6 +17,9 @@ operations:
       temperature: .
     output:
       id: .
+    errors:
+      - NO_WAY
+      - WONT_CREATE
   transit:
     concurrency: retry
     input:
