fix(core): allow additional properties for output

--- a/integration/dummies/credits/manifest.toa.yaml
+++ b/integration/dummies/credits/manifest.toa.yaml
@@ -15,6 +15,13 @@ operations:
     input:
       properties:
         balance: .
+    output:
+      id: .
+      balance: integer
+  observe:
+    output:
+      id: .
+      balance: integer
   deduce:
     concurrency: none
     input: integer
@@ -36,6 +43,7 @@ operations:
   set:
     input:
       balance: .
+    output: undefined
     forward: assign
   add:
     input:
