--- a/integration/dummies/messages/manifest.toa.yaml
+++ b/integration/dummies/messages/manifest.toa.yaml
@@ -57,6 +57,9 @@ operations:
   assign:
     input:
       text: .
+    output: undefined
+  observe:
+    output: undefined
 
 configuration:
   price: 1
