--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "json-schema-to-typescript": "13.1.2",
     "knex": "2.4.2",
     "lerna": "8.1.2",
+    "mongodb": "6.7.0",
     "msw": "2.2.1",
     "randomstring": "1.3.0",
     "testcontainers": "10.2.2",
