refactor(exposition): add streaming workflows (#634)
* docs(exposition): update workflow output format

* refactor(exposition): update workflow output format

* feat(exposition): add streaming workflow steps

* feat(exposition): add `authority` to workflows input

* fix(exposition): return CLRF within multipart

* docs(exposition): remove exception text from workflow output

* test(exposition): add accepted multipart types to scenarios

--- a/extensions/exposition/features/steps/components/octets.tester/manifest.toa.yaml
+++ b/extensions/exposition/features/steps/components/octets.tester/manifest.toa.yaml
@@ -7,9 +7,10 @@ storages: octets
 operations:
   foo: &operation
     input:
+      authority*: string
       storage*: string
       path*: string
-      entry: object
+      entry*: object
       parameters: object
   bar: *operation
   baz: *operation
@@ -17,3 +18,6 @@ operations:
   echo: *operation
   concat: *operation
   diversify: *operation
+  yield: *operation
+  yex: *operation
+  authority: *operation
