feat(exposition): add `redirect` to `octets:fetch`

--- a/extensions/exposition/features/steps/components/octets.tester/manifest.toa.yaml
+++ b/extensions/exposition/features/steps/components/octets.tester/manifest.toa.yaml
@@ -21,3 +21,8 @@ operations:
   yield: *operation
   yex: *operation
   authority: *operation
+  redirect:
+    input:
+      authority*: string
+      path*: string
+    output: string
