refactor(exposition): add Request object response to the `octets:redirect` endpoint

--- a/extensions/exposition/features/steps/components/octets.tester/manifest.toa.yaml
+++ b/extensions/exposition/features/steps/components/octets.tester/manifest.toa.yaml
@@ -26,4 +26,15 @@ operations:
       authority*: string
       path*: string
       parameters: <string>
-    output: string
+    output:
+      type: object
+      properties:
+        url: string
+        options:
+          type: object
+          properties:
+            method: string
+            headers: object
+            body: string
+      required:
+        - url
