fix(exposition): fix routing parameters

--- a/extensions/exposition/features/steps/components/echo/manifest.toa.yaml
+++ b/extensions/exposition/features/steps/components/echo/manifest.toa.yaml
@@ -12,3 +12,10 @@ operations:
       identity:
         id: string
         roles: [string]
+  parameters:
+    input: &parameters
+      type: object
+      properties:
+        a: string
+        b: string
+    output: *parameters
