feat(exposition): add `auth:claim`

--- a/extensions/exposition/components/identity.federation/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.federation/manifest.toa.yaml
@@ -44,6 +44,10 @@ operations:
     output:
       identity:
         id: string
+        claim:
+          iss: string
+          aud: string
+          sub: string
 
 exposition:
   /:
