--- a/connectors/bridges.node/package.json
+++ b/connectors/bridges.node/package.json
@@ -26,6 +26,7 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
+    "@babel/parser": "7.24.7",
     "@toa.io/core": "1.0.0-alpha.53",
     "@toa.io/filesystem": "1.0.0-alpha.53",
     "@toa.io/generic": "1.0.0-alpha.53",
