feat(exposition): add query parameters

--- a/extensions/exposition/schemas/query.cos.yaml
+++ b/extensions/exposition/schemas/query.cos.yaml
@@ -1,17 +1,11 @@
-_: true
 id?: string
 criteria?: string
 sort?: string
-omit:
+omit?:
   $ref: range
-  default:
-    value: 0
-    range: [0, 1000]
-limit:
+limit?:
   $ref: range
-  default:
-    value: 10
-    range: [1, 1000]
-  required: [value]
 selectors?: [string]
 projection?: [string]
+parameters?: [string]
+_: true
