Revert "feat(identity.federation): add caching support (#675)"
This reverts commit cdbd94efeee0574d0883d1b32de2f9ddbb42ea8e.

--- a/extensions/exposition/components/identity.federation/tsconfig.json
+++ b/extensions/exposition/components/identity.federation/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./operations",
-    "module": "Node16",
-    "moduleResolution": "Node16",
-    "target": "ES2022"
+    "outDir": "./operations"
   },
-  "include": ["source"]
+  "include": [
+    "source"
+  ]
 }
