fix(configuration): fix non-string secrets deployment

--- a/features/steps/.workspace/components/collection/configuration.base/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/configuration.base/manifest.toa.yaml
@@ -5,9 +5,11 @@ operations:
   echo:
     output:
       foo: string
+      bar: string
+      num: integer
 
 configuration:
   schema:
     foo: hello
-    bar:
-      baz: world
+    bar: world
+    num: integer
