--- a/features/steps/.workspace/components/collection/configuration.extended/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/configuration.extended/manifest.toa.yaml
@@ -2,12 +2,7 @@ prototype: '../configuration.base'
 namespace: configuration
 name: extended
 
-operations:
-  echo:
-    output:
-      bar: number
-
 configuration:
   schema:
-    bar: 1
     baz: something
+    qux: 1
