--- a/extensions/storages/schemas/fs.cos.yaml
+++ b/extensions/storages/schemas/fs.cos.yaml
@@ -5,5 +5,7 @@ properties:
   path:
     type: string
     maxLength: 4096
+  claim:
+    type: string
 required: [provider, path]
 additionalProperties: false
