--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -47,6 +47,8 @@
   "devDependencies": {
     "@toa.io/agent": "1.0.0-alpha.56",
     "@toa.io/extensions.storages": "1.0.0-alpha.58",
+    "@swc/core": "1.6.6",
+    "@swc/helpers": "0.5.11",
     "@types/bcryptjs": "2.4.3",
     "@types/cors": "2.8.13",
     "@types/negotiator": "0.6.1"
