feat(exposition): add max content size to `octets:store`

--- a/extensions/exposition/components/octets.storage/manifest.toa.yaml
+++ b/extensions/exposition/components/octets.storage/manifest.toa.yaml
@@ -10,6 +10,7 @@ operations:
       storage*: string
       request*: ~
       accept: string
+      limit: number
       meta: <string>
       trust: ~ # array of strings or regular expressions
     errors:
