--- a/runtime/cli/package.json
+++ b/runtime/cli/package.json
@@ -22,12 +22,12 @@
     "@toa.io/runtime": "*"
   },
   "dependencies": {
-    "@toa.io/console": "1.0.0-alpha.59",
     "@toa.io/generic": "1.0.0-alpha.59",
     "@toa.io/kubernetes": "1.0.0-alpha.59",
     "@toa.io/norm": "1.0.0-alpha.61",
     "@toa.io/operations": "1.0.0-alpha.61",
     "@toa.io/yaml": "1.0.0-alpha.59",
+    "openspan": "1.0.0-alpha.59",
     "dotenv": "16.1.1",
     "find-up": "5.0.0",
     "jsonpath": "1.1.1",
