chore: fix dependencies

--- a/connectors/storages.mongodb/package.json
+++ b/connectors/storages.mongodb/package.json
@@ -24,7 +24,8 @@
     "@toa.io/generic": "1.0.0-alpha.59",
     "@toa.io/pointer": "1.0.0-alpha.61",
     "mongodb": "6.7.0",
-    "saslprep": "1.0.3"
+    "saslprep": "1.0.3",
+    "openspan": "1.0.0-alpha.59"
   },
   "gitHead": "61c8e74a336385265767e9fd37d49128cb51b17f"
 }
