--- a/libraries/telemetry/package.json
+++ b/libraries/telemetry/package.json
@@ -23,6 +23,9 @@
   },
   "main": "transpiled/index.js",
   "types": "transpiled/index.d.ts",
+  "scripts": {
+    "transpile": "tsc"
+  },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node"
