--- a/extensions/stash/package.json
+++ b/extensions/stash/package.json
@@ -20,7 +20,8 @@
     "@toa.io/pointer": "1.0.0-alpha.61",
     "ioredis": "5.3.2",
     "msgpackr": "1.10.1",
-    "redlock-temp-fix": "5.0.0-beta.2"
+    "redlock-temp-fix": "5.0.0-beta.2",
+    "openspan": "1.0.0-alpha.59"
   },
   "scripts": {
     "transpile": "tsc"
