--- a/runtime/runtime/package.json
+++ b/runtime/runtime/package.json
@@ -43,7 +43,8 @@
     "@toa.io/storages.mongodb": "1.0.0-alpha.61",
     "@toa.io/storages.null": "1.0.0-alpha.59",
     "@toa.io/storages.sql": "1.0.0-alpha.61",
-    "@toa.io/userland": "1.0.0-alpha.61"
+    "@toa.io/userland": "1.0.0-alpha.61",
+    "openspan": "1.0.0-alpha.59"
   },
   "gitHead": "61c8e74a336385265767e9fd37d49128cb51b17f"
 }
