feat(telemetry): add logs (#699)
* chore: update required node version

* feat: add `openspan` library

* feat(telemetry): add `console` instance

* refactor: delete `@toa.io/console`

* feat(telemetry): add console level

* refactor: remove redundant logging

* refactor: update logging

* refactor: update logging

* refactor: update logging

* refactor(telemetry): add formatting of nested objects

* docs(telemetry): add logs

* docs(telemetry): update wording

* docs(telemetry): add namespace logs configuration

* docs(telemetry): add logs best practices

* chore: fix dependencies

* feat(openspan): add `fork`

* feat: add telemetry extension

* docs(telemetry): remove obsolete statement

* docs(telemetry): remove obsolete log formatting

* docs(telemetry): update wording

* feat(telemetry): add logs configuration

* fix(telemetry): fix default deployment

* refactor(exposition): update logging

* chore: add missing changes

* docs(telemetry): remove obsolete statements

--- a/connectors/storages.sql/package.json
+++ b/connectors/storages.sql/package.json
@@ -19,11 +19,11 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/console": "1.0.0-alpha.59",
     "@toa.io/generic": "1.0.0-alpha.59",
     "@toa.io/pointer": "1.0.0-alpha.61",
     "knex": "2.4.2",
-    "pg": "8.9.0"
+    "pg": "8.9.0",
+    "openspan": "1.0.0-alpha.59"
   },
   "gitHead": "61c8e74a336385265767e9fd37d49128cb51b17f"
 }
