--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "types"
   ],
   "engines": {
-    "node": ">= 18.0.0"
+    "node": ">= 20.0.0"
   },
   "bin": {
     "toa": "runtime/runtime/bin/toa"
@@ -76,7 +76,7 @@
     "cluster": "chmod +x ./integration/scripts/cluster.sh && ./integration/scripts/cluster.sh",
     "buildx": "docker buildx create --name toa --use && docker buildx inspect --bootstrap",
     "setup": "docker compose up -d && npm run cluster && npm run buildx && npm run publish:local && npm ci && toa deploy ./integration/context",
-    "ci": "rm -rf node_modules && npm exec --workspaces -c \"rm -rf node_modules transpiled\" && npm i",
+    "ci": "rm -f package-lock.json && rm -rf node_modules && npm exec --workspaces -c \"rm -rf node_modules transpiled\" && npm i",
     "transpile": "lerna run transpile",
     "retranspile": "npm exec --workspaces -c \"rm -rf transpiled\" && npm run transpile",
     "compose": "docker compose rm -f -s -v && docker compose up -d"
