--- a/runtime/boot/package.json
+++ b/runtime/boot/package.json
@@ -26,7 +26,8 @@
     "@toa.io/norm": "1.0.0-alpha.66",
     "@toa.io/schemas": "1.0.0-alpha.63",
     "clone-deep": "4.0.1",
-    "dotenv": "16.1.1"
+    "dotenv": "16.1.1",
+    "openspan": "1.0.0-alpha.66"
   },
   "gitHead": "61c8e74a336385265767e9fd37d49128cb51b17f"
 }
