--- a/libraries/agent/package.json
+++ b/libraries/agent/package.json
@@ -37,6 +37,7 @@
     "@toa.io/generic": "1.0.0-alpha.63",
     "http-parser-js": "0.5.8",
     "http-status-codes": "2.3.0",
+    "meros": "1.3.0",
     "negotiator": "0.6.3",
     "undici": "6.19.2"
   }
