--- a/runtime/runtime/package.json
+++ b/runtime/runtime/package.json
@@ -38,6 +38,7 @@
     "@toa.io/extensions.state": "1.0.0-alpha.63",
     "@toa.io/extensions.storages": "1.0.0-alpha.67",
     "@toa.io/extensions.telemetry": "1.0.0-alpha.67",
+    "@toa.io/extensions.realtime": "1.0.0-alpha.67",
     "@toa.io/norm": "1.0.0-alpha.67",
     "@toa.io/operations": "1.0.0-alpha.67",
     "@toa.io/prototype": "1.0.0-alpha.59",
