--- a/extensions/realtime/package.json
+++ b/extensions/realtime/package.json
@@ -17,6 +17,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@toa.io/core": "1.0.0-alpha.67",
     "openspan": "1.0.0-alpha.67"
   },
   "jest": {
