feat(exposition): add default backend

--- a/operations/src/deployment/chart/values.yaml
+++ b/operations/src/deployment/chart/values.yaml
@@ -32,6 +32,7 @@ services:
     port: 8000
     replicas: 2
     ingress:
+      default: true
       hosts: [dummies.toa.io]
       class: alb
       annotations:
