--- a/operations/src/deployment/chart/templates/services.yaml
+++ b/operations/src/deployment/chart/templates/services.yaml
@@ -75,6 +75,17 @@ spec:
                 port:
                   number: 8000
     {{- end }}
+    {{- if .ingress.default }}
+    - http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: extension-{{ $service }}
+                port:
+                  number: 8000
+    {{- end }}
 {{- end }}
 ---
 {{- end }}
