--- a/extensions/storages/package.json
+++ b/extensions/storages/package.json
@@ -33,6 +33,7 @@
     "@toa.io/agent": "1.0.0-alpha.79",
     "@toa.io/generic": "1.0.0-alpha.63",
     "@toa.io/schemas": "1.0.0-alpha.63",
+    "cloudinary": "2.4.0",
     "error-value": "0.3.0",
     "matchacho": "0.6.0",
     "msgpackr": "1.10.1",
