feat(storages): add cloudinary annotation schema

--- a/extensions/storages/schemas/annotation.cos.yaml
+++ b/extensions/storages/schemas/annotation.cos.yaml
@@ -3,6 +3,7 @@ patternProperties:
   '^[a-z0-9_]{1,32}$':
     oneOf:
       - $ref: s3
+      - $ref: cloudinary
       - $ref: fs
       - $ref: tmp
       - $ref: mem
