--- a/extensions/exposition/tsconfig.json
+++ b/extensions/exposition/tsconfig.json
@@ -4,10 +4,15 @@
     "outDir": "./transpiled",
     "module": "Node16",
     "moduleResolution": "Node16",
-    "target": "ES2022"
+    "target": "ES2022",
+    "resolveJsonModule": true
   },
-  "include": ["source"],
-  "exclude": ["**/*.test.ts"],
+  "include": [
+    "source"
+  ],
+  "exclude": [
+    "**/*.test.ts"
+  ],
   "ts-node": {
     "swc": true
   }
