--- a/extensions/exposition/tsconfig.json
+++ b/extensions/exposition/tsconfig.json
@@ -4,8 +4,7 @@
     "outDir": "./transpiled",
     "module": "Node16",
     "moduleResolution": "Node16",
-    "target": "ES2022",
-    "resolveJsonModule": true
+    "target": "ES2022"
   },
   "include": [
     "source"
