chore: rollback import json

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -71,6 +71,7 @@ overrides:
       '@typescript-eslint/non-nullable-type-assertion-style': warn
       '@typescript-eslint/unbound-method': warn
       '@typescript-eslint/no-invalid-void-type': off
+      '@typescript-eslint/no-var-requires': off
 
   - files: ["*.test.ts", "**/test/**"]
     extends: 'plugin:@typescript-eslint/disable-type-checked'
