--- a/extensions/storages/package.json
+++ b/extensions/storages/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "3.633.0",
     "@aws-sdk/lib-storage": "3.633.0",
+    "@toa.io/generic": "1.0.0-alpha.63",
     "@toa.io/schemas": "1.0.0-alpha.63",
     "cloudinary": "2.4.0",
     "error-value": "0.4.0",
