--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -17,18 +17,19 @@
     "access": "public"
   },
   "dependencies": {
+    "@isaacs/ttlcache": "1.4.1",
     "@toa.io/core": "1.0.0-alpha.91",
     "@toa.io/generic": "1.0.0-alpha.63",
     "@toa.io/schemas": "1.0.0-alpha.63",
     "bcryptjs": "2.4.3",
     "error-value": "0.3.0",
+    "http-cache-semantics": "4.1.1",
     "js-yaml": "4.1.0",
     "matchacho": "0.3.5",
     "msgpackr": "1.10.1",
     "negotiator": "0.6.3",
     "openspan": "1.0.0-alpha.91",
-    "paseto": "3.1.4",
-    "ultrafetch": "0.4.0"
+    "paseto": "3.1.4"
   },
   "jest": {
     "transform": {
@@ -49,12 +50,11 @@
     "features:octets": "cucumber-js features/octets.*"
   },
   "devDependencies": {
-    "@swc/core": "1.6.6",
-    "@swc/helpers": "0.5.11",
     "@toa.io/agent": "1.0.0-alpha.79",
     "@toa.io/extensions.storages": "1.0.0-alpha.91",
     "@types/bcryptjs": "2.4.3",
     "@types/cors": "2.8.13",
+    "@types/http-cache-semantics": "4.0.4",
     "@types/negotiator": "0.6.1",
     "jest-esbuild": "0.3.0"
   },
