--- a/extensions/exposition/tsconfig.json
+++ b/extensions/exposition/tsconfig.json
@@ -1,18 +1,12 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./transpiled",
-    "module": "Node16",
-    "moduleResolution": "Node16",
-    "target": "ES2022"
+    "outDir": "./transpiled"
   },
   "include": [
     "source"
   ],
   "exclude": [
     "**/*.test.ts"
-  ],
-  "ts-node": {
-    "swc": true
-  }
+  ]
 }
