feat(exposition): add `content-id` validation

--- a/extensions/exposition/components/octets.storage/manifest.toa.yaml
+++ b/extensions/exposition/components/octets.storage/manifest.toa.yaml
@@ -16,6 +16,7 @@ operations:
       - LOCATION_UNTRUSTED
       - LOCATION_LENGTH
       - LOCATION_UNAVAILABLE
+      - INVALID_ID
   get: &simple
     bindings: ~
     input:
