--- a/extensions/exposition/schemas/method.cos.yaml
+++ b/extensions/exposition/schemas/method.cos.yaml
@@ -1,4 +1,4 @@
-verb: /^(GET|POST|PUT|PATCH|DELETE|LOCK|UNLOCK)$/
+verb: /^(GET|HEAD|POST|PUT|PATCH|DELETE|LOCK|UNLOCK)$/
 mapping:
   namespace: string
   component: string
