refactor(exposition): rename `vary` into `map`

--- a/extensions/exposition/components/identity.basic/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.basic/manifest.toa.yaml
@@ -51,9 +51,8 @@ exposition:
   /:
     POST:
       anonymous: true
+      map:authority: authority
       io:output: [id]
-      vary:embed:
-        authority: authority
       endpoint: create
   /:id:
     io:output: [id]
