feat(exposition): add `auth:claims`

--- a/extensions/exposition/components/identity.federation/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.federation/manifest.toa.yaml
@@ -44,7 +44,7 @@ operations:
     output:
       identity:
         id: string
-        claim:
+        claims:
           iss: string
           aud: string
           sub: string
